fix/ spacing mobile

--- a/client/src/components/PresentationsItem/PresentationsItem.scss
+++ b/client/src/components/PresentationsItem/PresentationsItem.scss
@@ -24,12 +24,14 @@
         @media (max-width: 768px) {
             width: 9.5rem;
             align-items: center;
-            margin-bottom: 0.5rem;
+            margin-bottom: 0;
             height: 2.5rem;
             padding: 0;
+            display: flex;
         }
         @media (max-width: 600px) {
             width: 100%;
+            margin: .4rem 0;
         }
     }
 
@@ -38,16 +40,24 @@
         padding-left: 0;
         @media (max-width: 768px) {
             font-weight: bold;
+            width: 50%;
         }
         @media (max-width: 600px) {
             height: 1.5rem;
             width: 100%;
+            font-size: 1.1rem;
         }
     }
 
     .evaluator {
         width: 15%;
+        @media (max-width: 768px) {
+            width: 50%;
+            display: flex;
+            justify-content: flex-end;
+        }
         @media (max-width: 600px) {
+            justify-content: flex-start;
             height: 1.5rem;
             width: 100%;
         }
@@ -63,8 +73,8 @@
             width: 100%;
         }
         @media (max-width: 600px) {
-            height: 3.5rem;
-            font-size: 1.2rem;
+            height: auto;
+            font-size: 1.1rem;
         }
     }
 
@@ -127,10 +137,11 @@
         @media (max-width: 768px) {
             width: 100%;
             justify-content: flex-start;
+            margin-top: 1rem;
         }
         @media (max-width: 600px) {
             justify-content: space-between;
-            margin-bottom: .5rem;
+            margin: .4rem 0;
         }
 
         .btn-danger {
